--- a/tests/rate-limit/cmd/render/Taskfile.yml
+++ b/tests/rate-limit/cmd/render/Taskfile.yml
@@ -1,11 +1,15 @@
 ---
 version: "3"
 
+vars:
+  duration: 5
+
 tasks:
   default:
     desc: "Ingest data for charts"
     vars:
       source: ../parse/output/
+      limiters: 'drl fixed-window sliding-window leaky-bucket token-bucket sentinel'
       outputs:
         sh: find {{.source}} -type f -name '*.json' | xargs -n1 basename
     cmds:
@@ -13,4 +17,9 @@ tasks:
       - go fmt ./...
       - goimports -w .
       - for: { var: outputs, as: output }
-        cmd: go run . -f {{.source}}{{.output}} -p 5s > output/{{.output | replace ".json" ".png"}}
+        cmd: go run . -t rate -f {{.source}}{{.output}} -p {{.duration}}s > output/{{.output | replace ".json" ".png"}}
+      - for: { var: limiters, as: kind }
+        cmd: go run . -t duration -f {{.source}}{{.kind}}-rate-in.json -p {{.duration}}s > output/{{.kind}}-latency.png
+      - for: { var: limiters, as: kind }
+        cmd: go run . -t count -f {{.source}}{{.kind}}-rate-out.json -p {{.duration}}s > output/{{.kind}}-requests.png
+
