--- a/.github/workflows/ci-docker-tools.yml
+++ b/.github/workflows/ci-docker-tools.yml
@@ -7,6 +7,7 @@ name: Docker - CI tools
 # is modified, and on a weekly schedule to get updates.
 
 on:  # yamllint disable-line rule:truthy
+  workflow_dispatch:
   pull_request:
     paths:
       - 'docker/tools/**'
