--- a/.github/workflows/ci-docker-tools.yml
+++ b/.github/workflows/ci-docker-tools.yml
@@ -53,9 +53,9 @@ jobs:
       - name: 'Build tykio/ci-tools:${{ matrix.tag }}'
         uses: docker/build-push-action@v4
         with:
-          push: ${{ github.ref_name == 'main' }}
+          push: ${{ github.ref_name == 'main' || github.event_name == 'workflow_dispatch' }}
           pull: true
-          load: ${{ github.ref_name != 'main' }}
+          load: ${{ github.ref_name != 'main' && github.event_name != 'workflow_dispatch' }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           context: docker/tools/${{ matrix.tag }}
