--- a/.github/workflows/ci-docker-base.yml
+++ b/.github/workflows/ci-docker-base.yml
@@ -57,7 +57,6 @@ jobs:
         with:
           push: ${{ github.ref_name == 'main' || github.event_name == 'workflow_dispatch' }}
           pull: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          no-cache: true
           context: docker/base/${{ matrix.tag }}
           tags: tykio/ci-base:${{ matrix.tag }}
