Use GOPROXY=direct for ci-tools

--- a/docker/tools/latest/Dockerfile
+++ b/docker/tools/latest/Dockerfile
@@ -2,6 +2,7 @@ FROM golang:1.21 AS tools-build
 
 ENV CGO_ENABLED=0
 ENV GOBIN=/usr/local/bin
+ENV GOPROXY=direct
 WORKDIR /usr/local/bin
 
 RUN --mount=type=cache,mode=0755,target=/go/pkg/mod go install github.com/TykTechnologies/exp/cmd/httpbin-logserver@main
