--- a/tests/rate-limit/cmd/parse/Taskfile.yml
+++ b/tests/rate-limit/cmd/parse/Taskfile.yml
@@ -2,16 +2,19 @@
 ---
 version: "3"
 
+vars:
+  limiters: 'drl fixed-window sliding-window leaky-bucket token-bucket sentinel'
+
 tasks:
   default:
     desc: "Ingest data for charts"
-    vars:
-      limiters: 'drl fixed-window sliding-window leaky-bucket token-bucket sentinel'
     cmds:
       - mkdir -p output
       - go fmt ./...
       - goimports -w .
       - for: { var: limiters, as: kind }
         cmd: go run . -f ../../logs/{{.kind}}*-service.json -t json > output/{{.kind}}-rate-out.json
+        ignore_error: true
       - for: { var: limiters, as: kind }
         cmd: go run . -f ../../logs/{{.kind}}*-hey.csv -t csv > output/{{.kind}}-rate-in.json
+        ignore_error: true
