--- a/tests/rate-limit/docker-compose.yml
+++ b/tests/rate-limit/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       TYK_GW_ENABLETOKENBUCKETRATELIMITER:   ${TYK_GW_ENABLETOKENBUCKETRATELIMITER:-false}
       TYK_GW_ENABLEFIXEDWINDOWRATELIMITER:   ${TYK_GW_ENABLEFIXEDWINDOWRATELIMITER:-false}
       TYK_GW_ENABLESLIDINGWINDOWRATELIMITER: ${TYK_GW_ENABLESLIDINGWINDOWRATELIMITER:-false}
+      TYK_GW_ENABLEREDISROLLINGLIMITER:      ${TYK_GW_ENABLEREDISROLLINGLIMITER:-false}
       TYK_GW_ENABLESENTINELRATELIMITER:      ${TYK_GW_ENABLESENTINELRATELIMITER:-false}
 
   gw2:
@@ -58,8 +59,8 @@ services:
       TYK_GW_ENABLETOKENBUCKETRATELIMITER:   ${TYK_GW_ENABLETOKENBUCKETRATELIMITER:-false}
       TYK_GW_ENABLEFIXEDWINDOWRATELIMITER:   ${TYK_GW_ENABLEFIXEDWINDOWRATELIMITER:-false}
       TYK_GW_ENABLESLIDINGWINDOWRATELIMITER: ${TYK_GW_ENABLESLIDINGWINDOWRATELIMITER:-false}
+      TYK_GW_ENABLEREDISROLLINGLIMITER:      ${TYK_GW_ENABLEREDISROLLINGLIMITER:-false}
       TYK_GW_ENABLESENTINELRATELIMITER:      ${TYK_GW_ENABLESENTINELRATELIMITER:-false}
-
 
   httpbin:
     image: tykio/ci-tools
