--- a/tests/rate-limit/cmd/render/Taskfile.yml
+++ b/tests/rate-limit/cmd/render/Taskfile.yml
@@ -10,7 +10,7 @@ tasks:
     desc: "Ingest data for charts"
     vars:
       source: ../parse/output/
-      limiters: 'drl fixed-window sliding-window leaky-bucket token-bucket sentinel'
+      limiters: 'drl rrl sentinel fixed-window sliding-window leaky-bucket token-bucket'
       outputs:
         sh: find {{.source}} -type f -name '*.json' | xargs -n1 basename
     cmds:
@@ -18,11 +18,11 @@ tasks:
       - go fmt ./...
       - goimports -w .
       - for: { var: outputs, as: output }
-        cmd: go run . -t rate -f {{.source}}{{.output}} -p {{.duration}}s > output/{{.output | replace ".json" ".png"}}
+        cmd: go run . -info -t rate -f {{.source}}{{.output}} -p {{.duration}}s -o output/{{.output | replace ".json" ".png"}}
         ignore_error: true
       - for: { var: limiters, as: kind }
-        cmd: go run . -t duration -f {{.source}}{{.kind}}-rate-in.json -p {{.duration}}s > output/{{.kind}}-latency.png
+        cmd: go run . -t duration -f {{.source}}{{.kind}}-rate-in.json -p {{.duration}}s -o output/{{.kind}}-latency.png
         ignore_error: true
       - for: { var: limiters, as: kind }
-        cmd: go run . -t count -f {{.source}}{{.kind}}-rate-out.json -p {{.duration}}s > output/{{.kind}}-requests.png
+        cmd: go run . -t count -f {{.source}}{{.kind}}-rate-out.json -p {{.duration}}s -o output/{{.kind}}-requests.png
         ignore_error: true
