--- a/.github/workflows/ci-docker-tools.yml
+++ b/.github/workflows/ci-docker-tools.yml
@@ -8,6 +8,7 @@ name: Docker - CI tools
 
 on:  # yamllint disable-line rule:truthy
   workflow_dispatch:
+  repository_dispatch:
     types: ['exp-cmd']
   pull_request:
     paths:
